<resources>
    <string name="app_name">Wallpapers</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="account">Account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="welcome">Welcome!</string>
    <string name="night_or_light">Night mode or Light mode</string>
    <string name="search">Search…</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="uzbek">Uzbek</string>
    <string name="select_lang">Select language:</string>
    <string name="login">Login</string>
    <string name="loading_hd">Loading HD…</string>
    <string name="server_not_response">Server Not Response. Connect other service please wait!</string>
    <string name="retry_load">"HD image load failed, tap to retry load…"</string>
    <string name="already_gallery">"This picture is in your gallery!"</string>
    <string name="please_allow_storage_permission">Please allow storage permission!</string>
    <string name="saved">Saved</string>
    <string name="wallpaper_set">Wallpaper set!</string>
    <string name="add_favorites">Add\nFavorites</string>
    <string name="remove_favorites">Remove\nFavorites</string>
    <string name="totalText">Total:</string>
    <string name="save_gallery">Save\nGallery</string>
    <string name="setup_wallpapers">SET AS WALLPAPER</string>
    <string name="search_button">Search</string>
    <string name="type">Type…</string>
    <string name="please_try_later">Please try later!</string>
    <string name="no_result">No Result:</string>
    <string name="clear">Clear</string>
    <string name="failed_email_login">"failed to Authenticate !"</string>
    <string name="sign_up">Sign Up</string>
    <string name="empty">Empty</string>
    <string name="email_account">Email:</string>
    <string name="name">Name:</string>
    <string name="light_mode">Light Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="rate_app">Rate App</string>
    <string name="contact">Contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="cancel">No</string>
    <string name="yes">Yes</string>
    <string name="exit">Do you want to log out of the account?</string>
    <string name="message">Even if you log out of your account, your favorite photos will be saved!</string>
    <string name="other_apps">Other Apps</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="check_internet">Check Internet Connection</string>

    <string name="interstitial_ads">ca-app-pub-7450127230297437/5577104006</string>
    <string name="banner_ads_account">ca-app-pub-7450127230297437/8848196806</string>
    <string name="banner_ads_favorites">ca-app-pub-7450127230297437/5100523488</string>
</resources>