<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.SignUpFragment">

    <com.nitish.typewriterview.TypeWriterView
        android:id="@+id/loginWritableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/default_font"
        android:gravity="center"
        android:textColor="@color/login_welcome_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/filledLoginTextField1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledLoginTextField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/default_darker_gray"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/filledLoginTextField2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/text_input_icon_tint_not_focus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/default_font"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledLoginTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/default_darker_gray"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filledLoginTextField1"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/text_input_icon_tint_not_focus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/default_font"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/default_font"
        android:padding="15sp"
        android:text="@string/login"
        android:textColor="@color/login_text_color"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filledLoginTextField2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginNextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/login_card_background"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UnusedAttribute">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loginNextTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/default_font"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="20sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loginLottieAnim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_pink_lottie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>